--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "extract-training-from-chat": "ts-node scripts/extract-training-from-chat.ts",
     "train-word2vec": "ts-node scripts/train-word2vec.ts",
     "test-chatbot-training": "ts-node scripts/test-chatbot-training.ts",
+    "crawl-learning-resources": "ts-node scripts/crawl-learning-resources.ts",
     "sync-training-data": "ts-node scripts/sync-training-data.ts",
     "kill-port-5000": "node scripts/kill-port-5000.js",
     "kill-all-node": "node scripts/kill-all-node.js",
@@ -99,6 +100,7 @@
     "etag": "^1.8.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "express-rate-limit": "^7.4.0",
     "express-validator": "^7.2.1",
     "fast-deep-equal": "^3.1.3",
     "fast-glob": "^3.3.3",
