feat: add deployment configs and docs

--- a/server/.env.example
+++ b/server/.env.example
@@ -16,7 +16,7 @@ NODE_ENV=development
 # MONGODB_URI=mongodb://localhost:27017/bughunter
 
 # For MongoDB Atlas (Cloud - RECOMMENDED for team):
-MONGODB_URI=mongodb+srv://username:password@cluster.xxxxx.mongodb.net/bughunter?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://username:password@cluster.xxxxx.mongodb.net/BugHunter?retryWrites=true&w=majority
 
 # ==========================================
 # JWT Configuration
@@ -48,8 +48,16 @@ CLIENT_URL=http://localhost:3000
 # ==========================================
 # Judge0 Configuration (Code Execution)
 # ==========================================
+# For local Docker:
+# JUDGE0_API_URL=http://localhost:2358
+# JUDGE0_API_KEY=
+
+# For RapidAPI Judge0 (Production):
+# JUDGE0_API_URL=https://judge0-ce.p.rapidapi.com
+# JUDGE0_API_KEY=your-rapidapi-key
+
 JUDGE0_API_URL=http://localhost:2358
-JUDGE0_API_KEY=your-judge0-api-key
+JUDGE0_API_KEY=
 
 # ==========================================
 # Google Gemini AI Configuration (Optional)
@@ -64,14 +72,14 @@ ADMIN_EMAIL=admin@bughunter.com
 # ==========================================
 # SMS Configuration (Optional - Twilio)
 # ==========================================
-TWILIO_ACCOUNT_SID=your-twilio-account-sid
-TWILIO_AUTH_TOKEN=your-twilio-auth-token
-TWILIO_PHONE_NUMBER=your-twilio-phone-number
+# TWILIO_ACCOUNT_SID=your-twilio-account-sid
+# TWILIO_AUTH_TOKEN=your-twilio-auth-token
+# TWILIO_PHONE_NUMBER=your-twilio-phone-number
 
 # ==========================================
 # Email Configuration (Optional - Nodemailer)
 # ==========================================
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-email-app-password
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_USER=your-email@gmail.com
+# EMAIL_PASSWORD=your-email-app-password
